2009-02-23  John W. Eaton  <jwe@octave.org>

	* pt-select.h, pt-select.cc (tree_if_command::set_breakpoint,
	tree_if_command::delete_breakpoint): New functions.
	(tree_switch_command::set_breakpoint,
	tree_switch_command::delete_breakpoint): New functions.
	* pt-stmt.h, pt-stmt.cc (tree_statement::set_breakpoint,
	tree_statement::delete_breakpoint, tree_statement::is_breakpoint):
	Delegate real work to cmd or expr.
	(tree_statement::bp): Delete data member.
	(tree_statement::tree_statement): Don't initialize bp.
	(tree_statement::dup): Don't copy bp.

	* pt.h (tree::line (int), tree:column (int)): New functions.
	(tree:set_breakpoint, tree::delete_breakpoint): Now virtual.

	* parse.y (finish_if_command): Also store line and column info for
	if statement in first element of list.
	(finish_switch_command): Likewise, for switch.

	* input.cc (last_debugging_command): New static variable.
	(octave_gets): Set it here.  Don't insert repeated debugging
	commands in the history list.

2009-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/pinv.cc: Support diagonal and permutation matrices.

2008-02-21  David Bateman  <dbateman@free.fr>

	* OPERATORS/op-cs-scm.cc, OPERATORS/op-cs-sm.cc, OPERATORS/op-s-scm.cc,
	OPERATORS/op-s-sm.cc, OPERATORS/op-scm-cs.cc, OPERATORS/op-scm-s.cc,
	OPERATORS/op-sm-cs.cc, OPERATORS/op-sm-s.cc: Don't perform any 
	narrowing to full matrices.

2009-02-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-diag.h (octave_base_diag::sqrt): Remove.
	* ov-re-diag.cc (octave_diag_matrix::sqrt): New method.
	* ov-re-diag.h: Declare it.
	* ov-flt-re-diag.cc (octave_float_diag_matrix::sqrt): New method.
	* ov-flt-re-diag.h: Declare it.
	* ov-cx-diag.cc (octave_complex_diag_matrix::sqrt): New method.
	* ov-cx-diag.h: Declare it.
	* ov-flt-cx-diag.cc (octave_float_complex_diag_matrix::sqrt): New method.
	* ov-flt-cx-diag.h: Declare it.

2009-02-20  John W. Eaton  <jwe@octave.org>

	* dynamic-ld.cc (octave_dynamic_loader::do_load_mex): Clear and